--- a/public/html/submitInfo.html
+++ b/public/html/submitInfo.html
@@ -1,69 +1,77 @@
 	<!DOCTYPE html>
 	<html >
-		<head>
-			<meta charset="utf-8">
-			<meta http-equiv="X-UA-Compatible" content="IE=edge">
-			<meta name="viewport" content="width=device-width, initial-scale=1">
-			
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-			<!-- Bootstrap -->
-			<link href="../external_libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-			<link href="../css/bootstrapModify.css" rel="stylesheet">
-			
-			<title>the Beauty of Data</title>
-		</head>
-		<body>
+
+		<!-- Load Bootstrap -->
+		<link href="../external_libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../css/bootstrapModify.css" rel="stylesheet">
+
+		<title>the Beauty of Data</title>
+
+		<!-- Load Angular-->
+		<script src="http://code.angularjs.org/1.2.6/angular.js"></script> 
+
+
+	</head>
+	<body ng-app>
 		
 		<h1 class="header-start">bouvet </h1>
 		<div class="container">
 			<h3 class="text-orange">The Beauty of Data</h3>
 			<br><br>
 			<div class="text-white">
-			<p> Dine svar er nå registrert. Hvis du vil være med i trekningen av en premie, kan du fylle
-				ut informasjonen under. </p>
-			<p> Bouvet vil ikke bruke informasjonen til noe annet formål enn selve trekningen. 
-				Data vil bli slettet etter trekningen.</p>
-			</div>
-			<br><br><br><br>
-
-		<form action="/insertParticipant" method="post" class="form-horizontal" role="form">
-
-		  <div class="form-group">
-		    <div class="col-sm-offset-4 col-sm-4">
-		      <input type="text" class="form-control form-field text-white" name="name" placeholder="Navn">
-		    </div>
-		  </div>
-
-		  <div class="form-group">
-		    <div class="col-sm-offset-4 col-sm-4">
-		      <input type="email" class="form-control form-field text-white" name="email" placeholder="Email">
-		    </div>
-		  </div>
-		  <br>
-		  <div class="form-group">
-		    <div class="col-sm-offset-2 col-sm-8">
-		      <button type="submit" class="btn btn-def-bouvet">Submit info</button>
-		    </div>
-		  </div>
-		</form>
-	<br><br><br>
-
-	<form action="/public/html/start.html" method="get">
-			<input class="btn btn-escape" type="submit" value="Nei takk, tilbake til hovedsiden">
-		</form>
-
-
-	</div>
+				<p> Dine svar er nå registrert. Hvis du vil være med i trekningen av en premie, kan du fylle
+					ut informasjonen under. </p>
+					<p> Bouvet vil ikke bruke informasjonen til noe annet formål enn selve trekningen. 
+						Data vil bli slettet etter trekningen.</p>
+					</div>
+					<br><br><br><br>
 
 
 
 
-			 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-			 <!-- Include all compiled plugins (below), or include individual files as needed -->
-			 <script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
 
-			
 
-		</body>
-	</html>
+					<form action="/insertParticipant" method="post" class="form-horizontal" name="userForm" role="form" novalidate>
+						<div class="form-group">
+							<div class="col-sm-offset-4 col-sm-4">
+								<input type="text" class="form-control form-field text-white" name="name" placeholder="Navn" ng-model="participant.name" required>
+							</div>
+						</div>
+						<div class="form-group">
+							<div class="col-sm-offset-4 col-sm-4">
+								<input type="email" class="form-control form-field text-white" name="user.email" placeholder="Email" ng-model="participant.email" required>
+							</div>
+						</div>
+						<br>
+						<div class="form-group">
+							<div class="col-sm-offset-2 col-sm-8">
+								<button type="submit" ng-disabled="userForm.$invalid" class="btn btn-def-bouvet">Submit info</button>
+							</div>
+						</div>
+					</form>
+					<br><br><br>
+
+					<form action="/public/html/start.html" method="get">
+						<input class="btn btn-escape" type="submit" value="Nei takk, tilbake til hovedsiden">
+					</form>
+
+
+				</div>
+
+
+
+
+				<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+				<!-- Include all compiled plugins (below), or include individual files as needed -->
+				<script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
+
+
+
+			</body>
+			</html>
