added borders and minor fixes

--- a/public/html/insertAnswer.html
+++ b/public/html/insertAnswer.html
@@ -41,7 +41,7 @@
 								<input type="radio" name="sivilstatus" value="complicated">It's complicated<br>
 							</label>
 						</div>	
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -65,7 +65,7 @@
 								<input type="radio" name="pa_hodet" value="hijab">Hijab<br>
 							</label>
 						</div>
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -84,7 +84,7 @@
 							</label>
 						</div>
 
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -103,8 +103,7 @@
 					<br><br>
 
 
-
-					<div class="col-sm-4">
+					<div class="col-sm-4 col-left-border">
 						<div class="btn-group-vertical" data-toggle="buttons">
 							<div class="header-question"> Programmeringsstil: </div><br>
 							<label class="btn btn-primary">
@@ -117,7 +116,7 @@
 								<input type="radio" name="programmeringsstil" value="ordenungmusssein">Ordenung Muss Sein<br>
 							</label>
 						</div>
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -144,7 +143,7 @@
 								<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 							</label>
 						</div>
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -159,7 +158,7 @@
 								<input type="radio" name="personlighet" value="ekstrovertpluss">Ekstrovert med litt innabords
 							</label>
 						</div>
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -178,7 +177,7 @@
 					<br><br>
 
 
-					<div class="col-sm-4">
+					<div class="col-sm-4 col-left-border">
 						<div class="btn-group-vertical" data-toggle="buttons">
 							<div class="header-question"> Favorittgode på jobb: </div><br>
 							<label class="btn btn-primary">
@@ -198,7 +197,7 @@
 							</label>
 						</div>
 
-						<br><br>
+						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 						<div class="btn-group-vertical" data-toggle="buttons">
@@ -218,7 +217,7 @@
 							<label class="btn btn-primary">
 								<input type="radio" name="planer_for_kvelden" value="nytelivet">Nyte livet<br>
 							</div>
-							<br><br>
+							<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
 
 
 							<div class="btn-group-vertical" data-toggle="buttons">
@@ -230,8 +229,7 @@
 									<input type="radio" name="premie_hvis_du_vinner" value="oculusrift">Oculus Rift<br>
 								</label>
 							</div>
-							<br><br><br>
-						</div>
+							<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br><br>
 
 							<div class="btn-group-vertical" data-toggle="buttons">
 								<div class="header-question"> Kjønn: </div><br>
@@ -242,6 +240,7 @@
 									<input type="radio" name="kjonn" value="jane">Jane<br>
 								</label>
 							</div>
+						</div>
 							
 
 
