--- a/public/html/start.html
+++ b/public/html/start.html
@@ -15,7 +15,9 @@
 
 	<div class="container">
 		<body>
-			<h1 class="header-start"> The Beauty of Data </h1>
+			<h2 class="text-orange">The Beauty of Data</h2>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<h4 class="text-white">Vakkert i seg selv. Viktig for den det gjelder.</h4>
 		<form action="/public/html/insertAnswer.html" method="get">
 			<input class="btn btn-def-bouvet btn-start" type="submit" value="Start">
 		</form>
