--- a/public/html/submitInfo.html
+++ b/public/html/submitInfo.html
@@ -21,7 +21,9 @@
 		
 		<h1 class="header-start">bouvet </h1>
 		<div class="container">
-			<h3 class="text-orange">The Beauty of Data</h3>
+			<h2 class="text-orange">The Beauty of Data</h2>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<h4 class="text-white">Vakkert i seg selv. Viktig for den det gjelder.</h4>
 			<br><br>
 			<div class="text-white">
 				<p> Dine svar er nå registrert. Hvis du vil være med i trekningen av en premie, kan du fylle
