--- a/public/html/submitInfo.html
+++ b/public/html/submitInfo.html
@@ -46,7 +46,7 @@
 						</div>
 						<div class="form-group">
 							<div class="col-sm-offset-4 col-sm-4">
-								<input type="email" class="form-control form-field text-white" name="user.email" placeholder="Email" ng-model="participant.email" required>
+								<input type="email" class="form-control form-field text-white" name="email" placeholder="Email" ng-model="participant.email" required>
 							</div>
 						</div>
 						<br>
