changes to most of html-files
more consistent use of buttons

--- a/public/html/start.html
+++ b/public/html/start.html
@@ -15,18 +15,14 @@
 
 	<div class="container">
 		<body>
-			<h2 class="text-orange">The Beauty of Data</h2>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<h4 class="text-white">Vakkert i seg selv. Viktig for den det gjelder.</h4>
+			<h2 class="text-orange text-large">The Beauty of Data</h2>
+			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
 		<form action="/public/html/insertAnswer.html" method="get">
-			<input class="btn btn-def-bouvet btn-start" type="submit" value="Start">
+			<input class="container btn btn-def-bouvet btn-start" type="submit" value="Start">
 		</form>
+		<div class="container logo-bottom-bouvet"> bouvet </div>
 	</div>
-
-			 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-			 <!-- Include all compiled plugins (below), or include individual files as needed -->
-			 <script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
 
 		</body>
 	</html>
