--- a/public/html/allAnswers.html
+++ b/public/html/allAnswers.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="../external_libs/jquery.min.js"></script>
 	<script type="text/javascript" src="../external_libs/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="../js/seeAnswers.js"></script>
+	<link href="../css/bootstrapModify.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../external_libs/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
@@ -25,11 +26,11 @@
 					<th>Favorittgode</th>
 					<th>Planer for kvelden</th>
 					<th>Premie hvis du vinner</th>
-					<th>Behandlet</th>
+					<th>Kjønn</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="answer in answers">
+				<tr ng-repeat="answer in answers" ng-class="{danger : answer.processed === 0, success : answer.processed === 1}">
 					<td>{{answer.id_answers}}</td>
 					<td>{{answer.sivilstatus}}</td>
 					<td>{{answer.pa_hodet}}</td>
@@ -42,8 +43,7 @@
 					<td>{{answer.favorittgode}}</td>
 					<td>{{answer.planerforkvelden}}</td>
 					<td>{{answer.premiehvisduvinner}}</td>
-					<td ng-show="answer.processed === 0"><span class="glyphicon glyphicon-remove"></span></td>
-					<td ng-show="answer.processed === 1"><span class="glyphicon glyphicon-ok"></span></td>
+					<td>{{answer.kjonn}}</td>
 					<td>
 						<!-- Button trigger modal -->
 						<button class="btn btn-primary" data-toggle="modal" data-target="#myModal{{answer.id_answers}}">
@@ -54,7 +54,7 @@
 						<div class="modal fade" id="myModal{{answer.id_answers}}" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
-									<div class="modal-header">
+									<div ng-class = "{'modal-header': true, 'modal-custom-female': answer.kjonn==='jane', 'modal-custom-male': answer.kjonn ==='john'}">
 										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 										<h4 class="modal-title" id="myModalLabel">Svar: {{answer.id_answers}}</h4>
 									</div>
@@ -82,10 +82,6 @@
 							</div>
 						</div>
 					</td>
-					<!-- <td><div class="btn-group btn-toggle" data-toggle="buttons"> 
-    <button class="btn btn-default">ON</button>
-    <button class="btn btn-primary active">OFF</button>
-  </div></td> -->
 				</tr>
 			</tbody>
 		</table>
