making pages same format. Restructuring in css-file

--- a/public/html/registered.html
+++ b/public/html/registered.html
@@ -12,7 +12,7 @@
 			
 			<script type="text/javascript" src="../external_libs/angular.min.js"></script>
 
-			<title>the Beauty of Data</title>
+			<title>The Beauty of Data</title>
 		</head>
 		<body>
 		
