--- a/public/html/start.html
+++ b/public/html/start.html
@@ -5,24 +5,28 @@
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			
-
 			<!-- Bootstrap -->
 			<link href="../external_libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 			<link href="../css/bootstrapModify.css" rel="stylesheet">
 			
-			<title>the Beauty of Data</title>
+			<title>The Beauty of Data</title>
 		</head>
 
-	<div class="container">
-		<body>
-			<h2 class="text-orange text-large">The Beauty of Data</h2>
-			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
-		<form action="/public/html/insertAnswer.html" method="get">
-			<input class="container btn btn-def-bouvet btn-start" type="submit" value="Start">
-		</form>
-		<div class="container logo-bottom-bouvet"> bouvet </div>
-	</div>
 
-		</body>
+
+		<div class="container">
+			<body>
+				<h2 class="text-orange text-large">The Beauty of Data</h2>
+				
+				<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
+			
+				<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
+		
+				<form action="/public/html/insertAnswer.html" method="get">
+					<input class="btn btn-def-bouvet btn-start" type="submit" value="Start">
+				</form>
+				<div class="container logo-bottom-bouvet"> bouvet </div>
+			</body>
+		</div>
+
 	</html>
