--- a/public/html/submitInfo.html
+++ b/public/html/submitInfo.html
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="../external_libs/angular.min.js"></script>
 		
 
-		<title>the Beauty of Data</title>
+		<title>The Beauty of Data</title>
 
 
 	</head>
@@ -58,7 +58,7 @@
 					<br><br><br>
 
 					<form action="/public/html/start.html" method="get">
-						<input class="btn btn-escape" type="submit" value="Nei takk, tilbake til hovedsiden">
+						<input class="btn btn-escape text-small" type="submit" value="Nei takk, tilbake til hovedsiden">
 					</form>
 
 
