--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="../js/app.js"></script>
 	<link rel="stylesheet" type="text/css" href="../external_libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/bootstrapModify.css">
+	<title>The Beauty of Data</title>
 </head>
 <body>
 
