changed from john/jane

--- a/public/html/allAnswers.html
+++ b/public/html/allAnswers.html
@@ -54,7 +54,7 @@
 						<div class="modal fade" id="myModal{{answer.id_answers}}" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
-									<div ng-class = "{'modal-header': true, 'modal-custom-female': answer.kjonn==='jane', 'modal-custom-male': answer.kjonn ==='john'}">
+									<div ng-class = "{'modal-header': true, 'modal-custom-female': answer.kjonn==='kvinne', 'modal-custom-male': answer.kjonn ==='mann'}">
 										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 										<h4 class="modal-title" id="myModalLabel">Svar: {{answer.id_answers}}</h4>
 									</div>
