small fixes to css

--- a/public/html/start.html
+++ b/public/html/start.html
@@ -25,8 +25,9 @@
 				<form action="/public/html/insertAnswer.html" method="get">
 					<input class="btn btn-def-bouvet btn-start" type="submit" value="Start">
 				</form>
-				<div class="container logo-bottom-bouvet"> bouvet </div>
+				<div class="logo-bottom-bouvet"> bouvet </div>
 			</body>
 		</div>
+		
 
 	</html>
