added db locking of answers

--- a/public/html/participants.html
+++ b/public/html/participants.html
@@ -1,9 +1,9 @@
 <!doctype html>	
 <html ng-app>
 <head>
-	<title>All answers</title>
+	<title>All participants</title>
 	<script type="text/javascript" src="../external_libs/angular.min.js"></script>
-	<script type="text/javascript" src="../js/seeParticipants.js"></script>
+	<script type="text/javascript" src="../js/controllers.js"></script>
 	<link rel="stylesheet" type="text/css" href="../external_libs/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
