--- a/public/html/register-answer.html
+++ b/public/html/register-answer.html
@@ -9,7 +9,9 @@
 		<link href="../external_libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="../css/bootstrapModify.css" rel="stylesheet">
 
-
+		<!-- bootstrap and jquery -->
+		<script type="text/javascript" src="../external_libs/jquery.min.js"></script>
+		<script type="text/javascript" src="../external_libs/bootstrap/js/bootstrap.js"></script>
 
 		<title>The Beauty of Data</title>
 
@@ -19,7 +21,7 @@
 		<br>
 
 
-		<form action="/insertAnswerDb" method="post" name="userForm" role="form" novalidate>
+		<form action="/answers" method="post" name="userForm" role="form" novalidate>
 			
 
 
@@ -301,12 +303,6 @@
 			</form>
 		</div>
 		<br><br>
-
-
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
 
 		<br><br>
 
