--- a/public/html/register-participant.html
+++ b/public/html/register-participant.html
@@ -12,6 +12,9 @@
 
 		<script type="text/javascript" src="../external_libs/angular.min.js"></script>
 		
+		<!-- bootstrap and jquery -->
+		<script type="text/javascript" src="../external_libs/jquery.min.js"></script>
+		<script type="text/javascript" src="../external_libs/bootstrap/js/bootstrap.js"></script>
 
 		<title>The Beauty of Data</title>
 
@@ -36,7 +39,7 @@
 				<br><br>
 
 
-					<form action="/insertParticipant" method="post" class="form-horizontal" name="userForm" role="form" novalidate>
+					<form action="/participants" method="post" class="form-horizontal" name="userForm" role="form" novalidate>
 						<div class="form-group">
 							<div class="col-sm-offset-4 col-sm-4">
 								<input type="text" class="form-control form-field text-white" name="name" placeholder="Navn" ng-model="participant.name" required>
@@ -64,16 +67,6 @@
 
 				</div>
 				<div class="container logo-bottom-bouvet"> bouvet </div>
-
-
-
-
-
-				<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-				<!-- Include all compiled plugins (below), or include individual files as needed -->
-				<script src="../external_libs/bootstrap/js/bootstrap.min.js"></script>
-
 
 
 			</body>
