--- a/public/html/view-answers.html
+++ b/public/html/view-answers.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 	<div ng-controller="AnswerCtrl as ctrl">
+
+		<!-- table displaying the contents of the database -->
 		<table class="table table-hover">
 			<thead>
 				<tr>
@@ -30,6 +32,7 @@
 				</tr>
 			</thead>
 			<tbody>
+				<!--the ng-class is used for dynamically assigning classes to the rows to give them different colors -->
 				<tr ng-repeat="answer in answers | orderBy:['processed', 'id_answers']" ng-class="{warning: answer.locked === 1, danger : answer.processed === 0 && answer.locked === 0, success : answer.processed === 1 && answer.locked === 0}">
 					<td>{{answer.id_answers}}</td>
 					<td>{{answer.sivilstatus}}</td>
@@ -46,12 +49,12 @@
 					<td>{{answer.kjonn}}</td>
 					<td>
 						
-						<!-- Button trigger modal -->
+						<!--a button that triggers a modal with the data -->
 						<button class="btn btn-primary" data-toggle="modal" data-target="#myModal{{answer.id_answers}}" ng-click="getAnswer(answer.id_answers)">
 							Behandle svar
 						</button>
 
-						<!-- Modal -->
+						<!-- a modal that displays the answers and gives the user the possibility of changing status -->
 						<div class="modal" id="myModal{{answer.id_answers}}" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
@@ -88,10 +91,13 @@
 								</div>
 							</div>
 						</div>
+
 					</td>
 				</tr>
 			</tbody>
 		</table>
+
+		<!--a button that takes you back to the menu -->
 		<form action="/public/html/index.html" method="get">
 			<button type="submit" button name="backToMenu" class="btn btn-primary">
 				<span class="glyphicon glyphicon-home">
@@ -99,6 +105,32 @@
 				Tilbake til meny
 			</button>
 		</form>
+
+		<!--a button that triggers a modal to confirm that you want to delete all answers -->
+		<button class="btn btn-primary" data-toggle="modal" data-target="#confirmDeleteModal" >
+			<span class="glyphicon glyphicon-trash">
+			</span>
+			Slett alle svar
+		</button>
+
+		<!--a modal that wants you to confirm that you want to delete all answers -->
+		<div class="modal" id="confirmDeleteModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-sm">
+				<div class="modal-content ">
+					<div class ="modal-header modal-confirm-delete">
+						<h4 class="modal-title">Bekreft sletting</h4>
+					</div>
+					<div ng-class="modal-body">
+						Er du sikker på at du vil slette alle svarene i databasen?
+					</div>
+					<div class="modal-footer">
+						<button class="btn modal-confirm-delete" ng-click="deleteAnswers()" data-dismiss="modal">Slett alle</button>
+						<button class="btn btn-primary" data-dismiss="modal">Avbryt</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </body>
 </html>
