temp commit because of branch switching

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,65 +1,20 @@
 <!DOCTYPE html>
-<html ng-app="answerApp">
+<html ng-app="bodApp">
 <head>
 	<script type="text/javascript" src="../external_libs/angular.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../external_libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/bootstrapModify.css">
+	<script src="../js/app.js"></script>
+	<script src="../js/controllers.js"></script>
+	<script src="../external_libs/angular-route.min.js"></script>
+	<script src="../external_libs/jquery.min.js"></script>
+	<script src="../external_libs/bootstrap/js/bootstrap.js"></script>
+
+	
 	<title>The Beauty of Data</title>
 </head>
 <body>
-
-	<div class="container-fluid btn-group-custom">
-
-		
-		<!--a button that takes you the page where all the answers in the database are displayed -->
-		<div class="row" >
-			<form action="/public/html/view-answers.html" method="get" class="navbar-form ">
-				<button class="btn btn-def-bouvet btn-block btn-front-large" name="readAnswer" type="submit">
-					<span class="glyphicon glyphicon-list"></span>
-					Se alle svar</button>
-			</form>
-		</div>
-
-		<!--a button that takes you to the page to start registering answers -->
-		<div class="row">
-			<form action="/public/html/start.html" method="get"  class="navbar-form">
-				<button class="btn btn-def-bouvet btn-block btn-front-large" name="InsertAnswer" type="submit">
-					<span class="glyphicon glyphicon-pencil"></span>
-					Registrere svar</button>
-			</form>
-		</div>
-
-		<!-- a button that deletes all answers in the database, now no longer in use
-
-		<div class="row">
-			<form action="/deleteAnswers" method="get"  class="navbar-form">
-				<button class="btn btn-def-bouvet btn-block btn-front-large" name="deleteAllAnswers" type="submit">
-					<span class="glyphicon glyphicon-trash"></span>
-					Slett alle svar</button>
-			</form>
-		</div>
-	-->
-
-		<!--a button that takes you to a page that displays all the participants in the database -->
-		<div class="row">
-			<form action="/public/html/view-participants.html" method="get"  class="navbar-form">
-				<button class="btn btn-def-bouvet btn-block btn-front-large" name="participants" type="submit">
-					<span class="glyphicon glyphicon-user"></span>
-				Se alle deltakere</button>
-			</form>
-		</div>
-
-		<!--
-		<div class="row">
-			<form action="/deleteParticipants" method="get"  class="navbar-form">
-				<button class="btn btn-def-bouvet btn-block btn-front-large" name="deleteAllParticipants" type="submit">
-					<span class="glyphicon glyphicon-trash"></span>
-					Slett alle deltakere</button>
-			</form>
-		</div>
-	-->
-	</div>
-
+	<div ng-view></div>
 </body>
 </html>
 
