--- a/public/html/participant-registered.html
+++ b/public/html/participant-registered.html
@@ -20,7 +20,7 @@
 		<div class="container">
 			<h2 class="text-orange text-large">The Beauty of Data</h2>
 			<h6 class="text-white"> - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h6>
-			<p class="text-white text-medium">Vakkert i seg selv. Viktig for den det gjelder.</p>
+			<p class="text-white text-small">Vakkert i seg selv. Viktig for den det gjelder.</p>
 			<br><br>
 			<div class="text-white">
 				<p class="text-small">
@@ -37,7 +37,7 @@
 				</form>
 
 
-				<div class="container logo-bottom-bouvet"> bouvet </div>
+				<div class="container"><img src="../photos/logo3.png"> </div>
 			</div>
 
 		</body>
