--- a/public/html/register-answer.html
+++ b/public/html/register-answer.html
@@ -17,7 +17,7 @@
 
 	</head>
 	<body ng-app>
-		<div class="text-large text-orange"> &nbsp bouvet </div>
+		<div class="text-large text-orange"> &nbsp <img src="../photos/logo3.png"> </div>
 		<br>
 
 
@@ -44,7 +44,7 @@
 						</label>
 						<br>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> ----------------------------------</div><br>
 
 
 
@@ -63,7 +63,7 @@
 							<input type="radio" name="sivilstatus" value="complicated">It's complicated<br>
 						</label>
 					</div>	
-					<br><br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><br><div class="border-between-question">----------------------------------</div><br>
 
 
 
@@ -117,7 +117,7 @@
 							<input type="radio" name="pa_hodet" value="hijab">Hijab<br>
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question">----------------------------------</div><br>
 
 
 
@@ -133,7 +133,7 @@
 							<input type="radio" name="studiested" value="annet">Annet<br>
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question"> ----------------------------------</div><br>
 
 
 
@@ -188,7 +188,7 @@
 							<input type="radio" name="musikk" value="klassisk">Klassisk<br>
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question">----------------------------------</div><br>
 
 
 					<div class="btn-group-vertical" data-toggle="buttons">
@@ -203,7 +203,7 @@
 							<input type="radio" name="personlighet" value="ekstrovertpluss">Ekstrovert med litt innabords
 						</label>
 					</div>
-					<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+					<br><div class="border-between-question">----------------------------------</div><br>
 
 
 					<div class="btn-group-vertical" data-toggle="buttons">
@@ -251,7 +251,7 @@
 						<label class="btn btn-response">
 							<input type="radio" name="planer_for_kvelden" value="nytelivet">Nyte livet<br>
 						</label>
-						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+						<br><div class="border-between-question">----------------------------------</div><br>
 					</div>		
 
 
@@ -273,7 +273,7 @@
 						<label class="btn btn-response">
 							<input type="radio" name="favorittgode" value="pensjon">Pensjon<br>
 						</label>
-						<br><div class="border-between-question"> - - - - - - - - - - - - - - - - - </div><br>
+						<br><div class="border-between-question">----------------------------------</div><br>
 					</div>
 
 
